Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-12273

Deserialization failure, because of 'InternalException: couldn't execute a batch of exprs'

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 3.0, Impala 3.1.0, Impala 3.2.0, Impala 4.0.0, Impala 3.3.0, Impala 3.4.0, Impala 4.1.0, Impala 4.2.0
    • Impala 4.3.0
    • None
    • None
    • ghx-label-13

    Description

      During stress testing, an anomalous behavior was observed: deserialization failures leading to SQL execution failures.

      After multiple tests, three failure scenarios were identified:

      1. InternalException: couldn't execute a batch of exprs. The root cause is TProtocolException: Unrecognized type 97.
      2. InternalException: couldn't execute a batch of exprs. The root cause is TTransportException:  Cannot read. Remote side has closed. Tried to read 1 bytes, but only got 0 bytes.
      3. JVM core dump, with the root cause being G1ParScanThreadState::copy_to_survivor_space(InCSetState, oopDesc*, markOopDesc*)+0x263.

      By extracting a minimal test case, the above errors could be reproduced, ultimately indicating that the object returned by the native method in the Java code JNI invocation was prematurely gc.

       

      The hs_err and log are attached.

      Attachments

        1. FeSupport.15b28f2002cd.impala.log.INFO.20230630-175220.28436
          1.42 MB
          zhangqianqiong
        2. FeSupport.15b28f2002cd.impala.log.INFO.20230706-180457.2772
          20.93 MB
          zhangqianqiong
        3. hs_err_pid12712.log
          672 kB
          zhangqianqiong

        Issue Links

          Activity

            People

              qqzhang zhangqianqiong
              qqzhang zhangqianqiong
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: